Fea: Add one more try to second part of Day2